--- a/localisation/english/replace/replace_research_l_english.yml
+++ b/localisation/english/replace/replace_research_l_english.yml
@@ -473,7 +473,7 @@
 
  UNLOCK_TRAINS:0 "Unlock §YCivilian Train§! Research."
  electric_railway:0 "Electric Railway"
- electric_railway:0 "Railway electrification is the use of electric power for the propulsion of rail transport. Electricity is typically generated in large and relatively efficient generating stations, transmitted to the railway network and distributed to the trains."
+ electric_railway_desc:0 "Railway electrification is the use of electric power for the propulsion of rail transport. Electricity is typically generated in large and relatively efficient generating stations, transmitted to the railway network and distributed to the trains."
  haber_process:0 "Haber Process"
  haber_process_desc:0 "The Haber process is the main industrial procedure for the production of ammonia."
  advanced_oil_plant:0 "Advanced Oil Plant"
