--- a/localisation/english/replace/replace_victory_points_l_english.yml
+++ b/localisation/english/replace/replace_victory_points_l_english.yml
@@ -163,3 +163,8 @@
  VICTORY_POINTS_6813:0 "Maraş"
  VICTORY_POINTS_76203:0 "Malatya"
  VICTORY_POINTS_10775:0 "Aussa"
+ VICTORY_POINTS_876:0 "Hozat"
+ VICTORY_POINTS_9878:0 "Karahisar"
+ VICTORY_POINTS_9868:0 "Gümüşhane"
+ VICTORY_POINTS_6967:0 "Sliven"
+ VICTORY_POINTS_10497:0 "Bitlis"
