--- a/localisation/english/ww1_modifiers_l_english.yml
+++ b/localisation/english/ww1_modifiers_l_english.yml
@@ -84,3 +84,4 @@
  personal_friendship:0 "Personal Friendship"
  kiautschou_malus:0 "Japanese occupation in Shandong"
  RUS_russian_civil_war_raging:0 "Russian Civil War"
+ cat_armored_cars_research:0 "£research_speed_texticon Armored Car Research Speed"
