--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -61,6 +61,9 @@
  ### ORGANIZATIONS ###
 
  ### Ideas ###
+ ### KINGDOM OF POLAND ###
+ POL_act_of_two_emperors:0 "Act of Two Emperors"
+ POL_act_of_two_emperors_desc:0 "The issuance of the “Act of the Two Emperors” by the rulers of Germany and Austria-Hungary gives Poles hope for their own state after years of partition. The promise of a constitutional monarchy under the protection of the Central Powers evokes mixed feelings - for some it is the first step toward independence, for others it is a tool of the occupiers to get Polish recruits for the war in the East. The lack of demarcation of borders and silence on the functioning of the Polish government leave many Poles skeptical of the emperors' manifesto. However, the very fact that the Polish cause is becoming the subject of an international game, and that after years of Russification Polish education has begun to function and the foundations of a Polish state are being formed, gives Poles hope that their dream of a free homeland is closer to realization."
  POL_central_powers_occupation:0 "Central Powers Occupation"
  POL_central_powers_occupation_desc:0 "The area of the Kingdom of Poland is under occupation by Germany and Austria-Hungary, which ruthlessly exploit it economically. Raw materials, food, industry and labor are subordinated to the war needs of the occupying powers, and the Polish economy is depleted to support their military effort. The future of the Kingdom lies in the hands of foreign powers, which creates frustration and a sense of powerlessness among the population. Opposition to the domination of the Central Powers is growing, while deepening the economic and political crisis in the country."
  POL_temporary_council_of_state_idea:0 "Temporary Council of State"
@@ -68,7 +71,7 @@
  POL_unpopular_regency:0 "Unpopular Regency"
  POL_unpopular_regency_desc:0 "Although the Regency Council formally builds the foundations of Polish statehood, its position in society is fragile. Appointed by the occupying German and Austro-Hungarian authorities, the Council is seen as a tool of foreign powers, rather than a true symbol of independence. Many Poles view it with distrust, seeing its actions as a compromise with the occupiers. Despite progress in establishing state structures, the lack of popular support hinders effective governance and deepens political divisions in the country."
  POL_oath_crisis:0 "Oath Crisis"
- POL_oath_crisis_desc:0 "Faced with the unfair treatment of the Polish cause by the Central Powers, the soldiers of the Polish Legions from the First and Third Brigades, loyal to Józef Piłsudski, refused to take the oath of loyalty to the Kingdom of Poland and to honor the brotherhood of arms to the armies of Germany and Austria-Hungary in the Great War. The Oath Crisis of the legionnaires cast a shadow over the ability to recruit units of the Polish Armed Forces (Polnische Wehrmacht) in the Kingdom and triggered a political crisis in the country."
+ POL_oath_crisis_desc:0 "Faced with the unfair treatment of the Polish cause by the Central Powers, the soldiers of the Polish Legions of the First and Third Brigades, loyal to Józef Piłsudski, refused to swear allegiance to the Kingdom of Poland and honor the brotherhood of arms with the armies of Germany and Austria-Hungary in the Great War. Legionaries who refused to take the oath were interned by the German and Austrian occupation authorities. Following the crisis, Józef Piłsudski and Kazimierz Sosnkowski were arrested. After brief detention in several prisons, Piłsudski was taken to Magdeburg, where he is held in strict isolation in a military fortress. The oath crisis cast a shadow over the ability to recruit units of the Polish Armed Forces (Polnische Wehrmacht) in the Kingdom and triggered a political crisis in the country, leading to the self-dissolution of the Provisional Council of State in protest."
  POL_governor_general_idea:0 "Governor-General Rule"
  POL_governor_general_idea_desc:0 "Governor-general of Generalgouvernement Warschau Hans Hartwig von Beseler de facto governs the Kingdom of Poland while balancing the realisation of German interests with Polish independence aspirations. His rule in Warsaw is based on a policy of strict control while attempting to maintain a semblance of autonomy and make concessions to the Poles, which arouses mixed feelings among the Polish people. Beseler is seen as a symbol of German occupation, and his rule increases the sense of dependence on foreign powers and the social rift between cooperation and resistance among Poles."
  POL_not_yet_lost: "Poland Is Not Yet Lost!"
@@ -82,6 +85,8 @@
  POL_political_instability_3: "Political Instability: Relative Compromise"
  POL_political_instability_3_desc: "The conclusion of a compromise between Józef Piłsudski, the Warsaw government and the Polish National Committee in Paris, relaxed the tense atmosphere in the country. The quarrels at the very beginning of independence do not foster political stability or recognition by the victorious powers, which Poland urgently needs. The most important goal now is to hold elections to the Legislative Sejm and to adopt a Constitution that will create the legal basis for a reborn Poland."
  POL_council_of_national_defense_idea:0 "Council of National Defense"
+ POL_volunteer_army_idea:0 "Volunteer Army"
+ POL_volunteer_army_idea_desc:0 ""
  ### AuthDem Ideas ###
 
  ### Other
@@ -131,11 +136,11 @@
  ww1_poland.33.a:0 "We will find another way..."
  ww1_poland.33.b:0 "It was supposed to be a federation, not an alliance... but OK ?"
 
- ww1_poland.34.title:0 "Poles accepted our offer"
+ ww1_poland.34.title:0 "Poles Accepted Our Offer"
  ww1_poland.34.desc:0 ""
  ww1_poland.34.a:0 "That's great!"
 
- ww1_poland.35.title:0 "Poles reject the offer"
+ ww1_poland.35.title:0 "Poles Reject the Offer"
  ww1_poland.35.desc:0 ""
  ww1_poland.35.a:0 "There will be no consent!"
 
@@ -165,6 +170,50 @@
  ww1_poland.40.c:0 "Interesting..." #Others
  ww1_poland.40.e:0 "Oh wow" #Germans
  ww1_poland.40.f:0 "Another imperialist war" #Soviets
+
+ ww1_poland.41.title:0 "Russian Political Comittee"
+ ww1_poland.41.desc:0 "Under an agreement between the Chief of State Józef Piłsudski and the Russian politician Boris Savinkov, a Russian Political Committee will be established, officially recognized by the Polish authorities as the political representation of the anti-Bolshevik Russian forces. Consisting mainly of members of the Socialist Revolutionary Party (SR), the Committee aims to unite Russian forces for the fight against the Bolsheviks. Boris Savinkov will be the chairman of the Committee. The Committee includes Dmitry Filosofov (vice chairman), Nikolai Tchaikovsky, Dmitry Merezhkovsky, Zinaida Hippius, Nikolai Bulanov, Fyodor Rodichev. In addition, Russian military units are to be formed on Polish territory to join the fight against the Bolsheviks, under the political leadership of Boris Savinkov. Both Piłsudski and Savinkov believe in the future peaceful coexistence of Russia and Poland."
+ ww1_poland.41.a:0 "This is another piece in the Chief's puzzle"
+
+ ww1_poland.42.title:0 "Truce Proposition From Poland" #Event for Ukrainian People's Republic
+ ww1_poland.42.desc:0 ""
+ ww1_poland.42.a:0 "We got no choise"
+ ww1_poland.42.b:0 "We will never agree to it"
+ ww1_poland.43.title:0 "Ukrainian People's Republic Agree to Truce"
+ ww1_poland.43.desc:0 ""
+ ww1_poland.43.a:0 "Very good"
+ ww1_poland.44.title:0 "Ukrainian People's Republic Refuse to Truce" 
+ ww1_poland.44.desc:0 ""
+ ww1_poland.44.a:0 "A least we try..."
+
+ ww1_poland.45.title:0 "Strike of Students of Warsaw Universities"
+ ww1_poland.45.desc:0 "A student strike broke out in Warsaw, sparked by frustration over the Germans' failure to deliver on their promises contained in the Act of the Two Emperors. The lack of progress in creating an independent Polish army and the city's increasingly serious food supply problems further heightened tensions. In early May 1917, German police beat and then arrested several students of the University and the Warsaw Polytechnic, accusing them of participating in a rally on May 3 and "resistance to the authorities." Instead of calming the mood, the threat of closing the university intensified it. Representatives of the striking students met with the Marshal of the Provisional Council of State, Władysław Niemojowski, and the President of Warsaw, Prince Zdzisław Lubomirski, who appealed for an end to the protest. During further talks with the Inter-Party Political Circle and the National Council, the politicians promised to take action to make the university independent of the occupation authorities. Governor-General Hans Hardwig von Beseler responded to the strike with a critical speech, condemning the students and emphasizing the need for "internal discipline" in the face of the German occupation authorities. The tone of Beseler's speech gave no hope that the demands of the academic youth would be met."
+ ww1_poland.45.a:0 "There is not much we can do..."
+
+ ww1_poland.46.title:0 "Battle of Lwów"
+ ww1_poland.46.desc:0 "Today the Ukrainian soldiers of the former Austro-Hungarian army, anticipating Polish underground organizations, took control of key public buildings in Lwów and announced the creation of the West Ukrainian People's Republic. Faced with this threat, Polish underground organizations and the city's residents, including Polish youth, spontaneously took up arms to defend Lwów. Young volunteers stood on the front lines, fighting for every inch of the city. Polish politicians established the Polish National Committee under the leadership of Ernest Adam, leader of the National Democracy in Lwów, and Tadeusz Cieński, representing the conservatives (Podolacy). The Committee temporarily serves as the highest Polish authority in Lwów. The Committee established the Supreme Command of the Polish Army headed by Captain Czesław Mączyński. In an appeal to the Polish population, the Committee calls on them to report to Polish units and to submit to the authority of the Supreme Command of the Polish Army. The city expects help from Warsaw."
+ ww1_poland.46.a:0 "We need to help them!"
+
+ ww1_poland.47.title:0 "Provisional People's Government of the Republic of Poland"
+ ww1_poland.47.desc:0 "In view of the defeat of the Central Powers and the disintegration of their occupation structures into the General Government of Lublin, the Provisional People's Government of the Polish Republic, led by Ignacy Daszyński, was established in Lublin without agreement with the Regency Council. The formation of the Provisional Government is a coup d'état against the authority of the Regency Council, whose representative in Lublin was placed under house arrest, and the new cabinet took over administration and military authority. This government, composed mainly of representatives of the left, supported by units of the Polish Military Organization (POW) under the command of Edward Śmigły-Rydz, in its manifesto promised far-reaching social and agrarian reforms, and openly called for the overthrow of the Regency Council in Warsaw. In addition, the 2nd Battalion of the 2nd Infantry Regiment of the Polish Armed Forces, stationed in Lublin, numbering 650 soldiers, was interned and, after negotiations, went over to the side of the Provisional Government. The proclamation of the Lublin government deepened political divisions in the country and made it more difficult to take control of the emerging Poland."
+ ww1_poland.47.a:0 "The unity of power must be maintained!"
+
+ ww1_poland.48.title:0 "Polish Liquidation Commission in Kraków"
+ ww1_poland.48.desc:0 "The Polish Liquidation Commission, headed by Wincenty Witos, was established in Kraków. The commission is tasked with seizing power in Galicia and Cieszyn Silesia, aiming to liquidate the Austrian administration and incorporate these territories into a reborn Poland. It is another center of power competing with the Regency Council in Warsaw, which seeks to unite the country under its authority. Initiatives such as the Kraków one could weaken the Council's position, raising the danger of power sharing and lack of central control."
+ ww1_poland.48.a:0 "We must strive for unity...."
+
+ ww1_poland.49.title:0 "National Council of the Duchy of Cieszyn"
+ ww1_poland.49.desc:0 "During a large rally in Cieszyn, the Polish population clearly declared their desire to incorporate the Duchy of Cieszyn into the reborn Poland. Three days later, the National Council of the Duchy of Cieszyn issued a proclamation, declaring the lands to be part of Poland and assuming authority over them, while calling for the withdrawal of Austrian troops and the formation of Polish units. On the night of October 31th November 1st, Polish soldiers disarmed the Austrian garrison, liquidating the Austrian administration in Cieszyn Silesia. The National Council proposes to settle the question of borders between Poland and the Czechs in a spirit of agreement, based on national affiliation and the will of the population. However, tensions with the Czechs, who also claim part of the area, could threaten the stability of the region."
+ ww1_poland.49.a:0 "Cieszyn Silesia must be Polish!"
+
+ ww1_poland.50.title:0 "Coup Attempt Against Regency Council"
+ ww1_poland.50.desc:0 "Faced with growing public discontent and the weakened position of the government, Prime Minister Józef Świezyński, in an attempt to regain public support for his government, announced a manifesto dethroning the Regency Council and called for the formation of a national government based on cooperation with the left and supporters of Józef Piłsudski. Despite attempts to present the manifesto in the spirit of national unification, its leftist tone did not convince either the left or the Piłsudskiites, which rejected the offer of cooperation. The coup attempt failed, and the Regency Council immediately dismissed Świezyński, which the prime minister accepted without resistance. The country found itself in crisis, without a functioning Council of Ministers, and power passed to the provisional government of Władysław Wróblewski. The failed coup attempt highlights the power crisis facing the Regency Council."
+ ww1_poland.50.a:0 "The situation is complicated..."
+
+ ww1_poland.60.title:0 "Józef Piłsudski's Resignation"
+ ww1_poland.60.desc:0 "Józef Piłsudski, the Chief of State and Commander-in-Chief, submitted a letter of resignation to Prime Minister Wincenty Witos. After submitting his resignation, he held several key meetings with General Tadeusz Rozwadowski, French military advisor General Maxime Weygand, and Cardinal Aleksander Kakowski. After these meetings, Piłsudski left Warsaw. The question is what to do in this situation? Shouldn't the Prime Minister announce the resignation of the Chief, which will hit the morale of the army and society, or should he announce his resignation, opening the way to changes at the highest levels of power?"
+ ww1_poland.60.a:0 "This can't be announced now!"
+ ww1_poland.60.b:0 "Prime Minister accepts the resignation"
 
  poland_1918_flav.2.title:0 "Poland's Wedding to the Sea"
  poland_1918_flav.2.desc:0 ""
@@ -199,6 +248,7 @@
  POL_declaration_of_independence_desc:0 ""
  POL_swiezynskis_cabinet:0 "Świeżyński's Cabinet"
  POL_swiezynskis_cabinet_desc:0 ""
+ POL_return_of_brigadier_piLsudski:0 "Return of Brigadier Piłsudski"
  POL_wojsko_polskie:0 "Wojsko Polskie"
 
  POL_polnische_wehrmacht:0 "Polnische Wehrmacht"
@@ -249,6 +299,9 @@
  POL_the_belarus_offensive:0 "The Belarus Offensive"
  POL_the_belarus_offensive_desc:0 ""
 
+ POL_civil_administration_of_eastern_territories: "Civil Administration of Eastern Territories"
+ POL_civil_administration_of_eastern_territories_desc: ""
+
  POL_sejny_uprising: "Sejny Uprising" 
  POL_sejny_uprising_desc: "Work in progress..." 
  POL_coup_attempt_in_lithuania: "Coup Attempt in Lithuania"
@@ -294,7 +347,7 @@
  POL_treaty_of_warsaw_desc: ""
 
  POL_kiev_offensive: "Kiev Offensive"
- POL_kiev_offensive_desc: ""
+ POL_kiev_offensive_desc: "Józef Piłsudski decided to launch an offensive in Ukraine, aimed at driving out the Bolsheviks and re-establishing the Ukrainian People's Republic, led by otaman Symon Petliura. The goal of the operation is to capture Kiev and create a buffer Ukraine that would protect Poland from Bolshevik Russia. The Polish-Ukrainian alliance was to be the foundation of a future federation of the nations of Central and Eastern Europe, in which Poland would play a leading role."
 
 
  POL_polish_general_staff: "Polish General Staff"
@@ -411,8 +464,8 @@
  ### Characters ###
 
  ### Country Leaders
- POL_zdzislaw_lubomirski:0 "Zdzisław Lubomirski"
- POL_janusz_radziwill:0 "Janusz Franciszek I" #Janusz Radziwiłł
+ POL_zdzislaw_lubomirski:0 "Zdzisław I Lubomirski"
+ POL_janusz_radziwill:0 "Janusz I Franciszek" #Janusz Radziwiłł
 
  ###Generals
  POL_jan_romer:0 "Jan Romer"
@@ -432,5 +485,6 @@
  POL_germanophile:0 "Polish Germanophile"
  POL_wojciech_trampczynski:0 "Wojciech Trąmpczyński"
  POL_marshal_of_sejm:0 "Marshal of the Sejm"
+ POL_general_commissioner_of_the_eastern_lands:0 "General Commissioner of the Eastern Lands"
 
  ### Military High Command
