--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2614,6 +2614,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  POL_jan_dabski:0 "Jan Dąbski"
  POL_maciej_rataj:0 "Maciej Rataj"
  POL_stanislaw_grabski:0 "Stanisław Grabski"
+ POL_jerzy_osmolowski:0 "Jerzy Osmołowski"
  POL_wladyslaw_studnicki:0 "Władysław Studnicki"
  POL_julian_marchlewski:0 "Julian Marchlewski"
  POL_feliks_kon:0 "Feliks Kon"
