--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4039,8 +4039,8 @@
  AUH_wunderwaffen:0 "« Wunderwaffen »"
  AUH_wunderwaffen_desc:0 "The lengthening of the conflict forces us to race for innovation. Our researchers are not lacking in ideas, particularly in aviation, tanks and high-frequency communication."
 
- AUH_polish_legion:0 "Polish Eastern Legion"
- AUH_polish_legion_desc:0 "In order to strengthen the front, we can initiate the gathering of an elite Polish volunteer legion."
+ AUH_polish_legion:0 "Polish Legions"
+ AUH_polish_legion_desc:0 "Polish independence aspirations should be used to strengthen our military forces on the Eastern Front. In consultation with Polish independence activists, a decision was made to form the Polish Legions - military units composed of Polish volunteers to fight alongside the Austro-Hungarian army. For us, the Legions represent an important military resource, and at the same time a tool to attract Poles to fight against a common enemy - Russia."
 
  AUH_purification_of_the_empire:0 "Lieb' Vaterland Magst Ruhig Sein!"
  AUH_purification_of_the_empire_desc:0 "Despite decades of integration, the fierce opposition of certain populations of the empire shows us that cohabitation is not possible. We are forced to take drastic measures in order to ensure the survival of the empire. We are not monsters, we act for the good of our people."
