--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5255,6 +5255,9 @@ ww1_romania.46.a:0 "We need to shore up our margins amongst rural Romania"
 ww1_romania.46.b:0 "Lets see if we can try to flip some highly educated urban voters"
 disable_htopnl:0 "§RDisables§! national focus: '§YHostile Takeover of the PNL§!'"
 ROM_election_russik_style:0 "We will manage the §lPNL§! election campaign. We will make a variety of choices on our campaign strategy, depending on what we do, we may win or lose the elections. §RWe will not be directly told the results of our decisions, so choose wisely§!"
+ww1_romania.52.t:0 "Austria Rejects Request for Bukovina"
+ww1_romania.52.d:0 "After being briefly considered in Hungarian parliment, Austria-Hungary has refused our request for bukovina in exchange for formally joining the central powers."
+ww1_romania.52.a:0 "Damn Hungarians"
 ww1_romania.45.t:0 "PC Attacks our Government as Corrupt"
 ww1_romania.45.d:0 "The PC has launched several attack campaigns against our government poiting out incidents of corruption or nepotism amongst the cabinet. This is a damaging attack that is decreasing our support nation wide, and we must respond. How will we?"
 ww1_romania.45.a:0 "Take these accusations head on"
