--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -5284,7 +5284,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_xinhai.3.d: "Each province responds and join the the revolution. Now, the leadership of the revolution has passed over to the Chinese Revolutionary Alliance, not Hubei Military Government."
  ww1_xinhai.3.a: "Overthrow the Qing dynasty!"
  ww1_xinhai.4.t: "Yuan Shikai Asks Emperor to Abdicate"
- ww1_xinhai.4.d: "The appointed prime minister, general Yuan Shikai, realizes that the empire has no chance of surviving. Therefore, he asks the young emperor to abdicate and recognize the power of the revolutionaries, to stop the bloodshed and save the chance to stay alive after the revolution."
+ ww1_xinhai.4.d: "General Yuan Shikai, realizes that the empire has no chance of surviving. Therefore, he asks the young emperor to abdicate and recognize the power of the revolutionaries, to stop the bloodshed and save the chance to stay alive after the revolution."
  ww1_xinhai.4.a: "Abdicate..."
  ww1_xinhai.4.a.tt: "Yuan will put a deal to §Bthe revolutionaries§! over §Yrepublic presidency§!. Saying he’ll surrender the Qing dynasty and cease to attack down the revolution, if they accept and §Yinstall him as the President of the Provisional Government of the Republic of China.§!"
  ww1_xinhai.4.b: "We can deal with them without him..."
@@ -5305,11 +5305,11 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_xinhai.9.d: "Tibet was a vassal state of the Qing Dynasty and had been invaded twice by the British only a few years earlier. However, instead of trying to defend the region and repel the invaders, the Chinese pressured the Tibetans into accepting the terms demanded by the British imperialists. Once the foreigners were satisfied and withdrew, Chinese troops marched into Tibet and tried to re-establish their authority over them.\nBut just in time, the Xinhai Revolution broke out and the Tibetans declared their independence from Chinese incompetent, oppressive rule."
  ww1_xinhai.9.a: "Damn it!"
  ww1_xinhai.9.b: "May the Buddha protect Tibet! (Play as [TIB.GetNameWithFlag])"
- ww1_xinhai.10.t: "Yuan's Deal Offer"
- ww1_xinhai.10.d: "The Beiyang general of the Qing dynasty, Yuan Shikai puts a deal to revolutionaries over republic presidency. Saying he’ll surrender the Qing dynasty and cease to attack down the revolution, if we accept and install him as the President of the Provisional Government of the Republic of China."
- ww1_xinhai.10.a: "[ROOT.GetLeader] welcomes his offer."
+ ww1_xinhai.10.t: "Qing Monarchy Abolished"
+ ww1_xinhai.10.d: "The Beiyang general of the Qing dynasty, Yuan Shikai, forced the Qing emperor to abdicate. Now the revolutionaries have achieved their goal, and we must proceed with the establishment of the new republic to stabilise the nation. Sun Yat-sen believes that the present stage is the second stage of democratisation, and that the regime should be led by the revolutionaries who are drafting the constitution. Yuan Shikai is open to dialogue."
+ ww1_xinhai.10.a: "[ROOT.GetLeader] welcomes him."
  ww1_xinhai.10.b: "No dictator allowed!"
- rejected_yuan: "The Republic has rejected Yuan's deal over presidency"
+ xinhai_compromise_fail: "§BThe Revolutionaries§! §Rhas rejected§! to compromisse with §YYuan Shikai§!"
  ww1_xinhai.11.t: "Answer from the Republicans"
  ww1_xinhai.11.d: "They said they won't let Yuan to take over the power and become a dicator."
  ww1_xinhai.11.a: "You've chosen death."
@@ -5343,6 +5343,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_qing.7.t: "Yuan Shikai Cabinet"
  ww1_qing.7.d: "To suppress these prevalent uprisings and riots we must to summon general Yuan Shikai to command the Beiyang Army. He insisted he is ill and rejected our offer to promote. However there was no one to disentangle the chaos without him. He finally demanded to appoint him as the Prime Minister, so we decided to step down Prince Qing, and Shikai is named the new Prime Minister, without any other means."
  ww1_qing.7.a: "Only person to save the Dynasty..."
+ ww1_qing.7.tt: "§RYuan Shikai might want to make a compromise with the revolutionaries...§!"
  ww1_qing.8.t: "Prince Qing Cabinet"
  ww1_qing.8.d: "For the first time in the history of the Qing Dynasty, a constitutional cabinet is established to reform the empire. Aisin-Gioro Yikuang is appointed as the first Prime Minister, and the cabinet consisted of 13 members, including 7 members of the Imperial Family and only 4 Han Chinese. Reformers in the country seem to be disappointed with their expectations of this measure."
  ww1_qing.8.a: "Aw crab."
@@ -5361,6 +5362,27 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_qing.13.t: "Yuan Shikai Assassinated!"
  ww1_qing.13.d: "The leader of the Beiyang Clique, Yuan Shikai, was shot and killed by an assailant. This happened three days after he had resigned from all public office following the emperor's suggestion and stayed in his home. He was already found dead when the caretaker of his home checked him, and many generals and officials are gathering in Beijing to offer condolences.\nFollowing his death, already, the whole country is boiling with rumors and anxiety. Some says that there are a lot of suspicious military acts spotted."
  ww1_qing.13.a: "Shocking!"
+ ww1_qing.15.t: "Yuan Shikai Suggests Secret Compromisation"
+ ww1_qing.15.d: "Yuan Shikai, the Imperial Commissioner and Prime Minister of the Qing dynasty, wrote to Hubei military commander Li Yuanhong to explore the possibility of a compromisation. Yuan Shikai has made an unorthodox proposal to establish a constitutional monarchy and, if accepted, stop putting down revolutionary troops and join the revolutionaries. While a compromise may be necessary for the revolution to succeed because the his Beiyang Army is more powerful than the revolutionary troops, revolutionaries question whether it is worth it to keep the Qing monarchy in the place."
+ ww1_qing.15.a: "Suggest him as the Provisional President of the Rep."
+ ww1_qing.15.a.tt: "We would §Yhave to appoint him as the provisional president§! upcoming government formation."
+ ww1_qing.15.b: "Don't forget he failed the last reform effort in 1898."
+ ww1_qing.15.b.tt: "§YYuan Shikai§! would §Ywithdraw from the negotiation§! with §Brevolutionaries§! and would §Rfocus on suppressing the revolution§!..."
+ ww1_qing.16.t: "Yuan Shikai Demands for the National Convention"
+ ww1_qing.16.d: "The compromisation between the revolutionaries and Yuan Shikai had been paused because the Provisional Government appointed Sun Yat-sen as the Provisional President. Yuan Shikai wants to have assurance that he could get any place in the new republic, thus he demands the National Convention to decide the future of the nation and which regime should be established."
+ ww1_qing.16.a: "We accept him as the president, but government remains in Nanjing."
+ ww1_qing.16.a.tt: "§BSun Yat-sen§! would §Yhave to transfer§! his presidency to §YYuan Shikai§!."
+ ww1_qing.16.b: "We don't need him anymore!"
+ ww1_qing.17.t: "Yuan Shikai Requests for the National Convention"
+ ww1_qing.17.d: "Prime Minister Yuan Shikai says that the revolution is out of control and we should do some kind of reform to keep them in the bay. He suggests that we can call for the National Convention to debate and decide the nation's fate and accept the consistutional monarchy. And if we reject his application he would give up doing his job and might try to betray the monarchy as few of us already worried."
+ ww1_qing.17.a: "Accept the constitution but no for republic!"
+ ww1_qing.17.a.tt: "§YYuan Shikai§! would proceed to contact with the revolutionaries, but it §Ris uncertain that they would accept the constitutional monarchy§!."
+ ww1_qing.17.b.tt: "§YYuan Shikai§! would resign and try to find another chance to §Rgrap his power§!."
+ ww1_qing.18.d: "Yuan Skai, the warlord commander of the Beiyang Army at odds with the Qing, has offered to join our cause with his army that was suppressing the revolution if we elect him as the Provisional President of the Republic of China. Can we trust him?"
+ ww1_qing.18.a: "To achive revolutional victory."
+ ww1_qing.19.t: "Yuan Shikai Coupes the Monarch"
+ ww1_qing.19.d: "Yuan Shikai has now forced the young emperor to abdicate. Meanwhile, Yuan has failed to negotiate with the revolutionaries, and the empire has literally become an empire without an emperor. No one in China is above Yuan Shikai, and he will see the revolutionaries who don't listen to him as enemies. Now there is only one way to end this. Smash them all or be smashed."
+ ww1_qing.19.a: "End of contents."
 
  ww1_qing.20.t: "[FROM.Capital.GetCapitalVictoryPointName] Government Sues for Peace"
  ww1_qing.20.d: "The [FROM.Capital.GetCapitalVictoryPointName] government has admitted defeat in the war of concessions in China. They offer to pay reparations in exchange for a return to pre-war conditions."
@@ -6120,6 +6142,16 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_china.224.t: "Provisional Constitution of the Republic of China"
  ww1_china.224.d: "The Provisional Government of the Republic of China established during the revolution prescribed the "Organisational Outline of the Provisional Government of the Republic of China" for the establishment of the government, which consisted of Chapter 1, the Provisional President, Chapter 2, the House of Councillors, and Chapter 3, the Executive Branches. The "Provisional Constitution of the Republic of China" distributed political power to the various government bodies, which were written in seven chapters; the Main Principle, the People, the House of Councillors, the Provisional President, the Vice-President, the State Council, the Court, and the Supplementary Provision, etc. This division of power reflected the five branches of government envisioned by Sun Yat-sen of Tongmenghui, who led the drafting of the Provisional Constitution.\nThe existence of the Provisional Constitution is intended to precede the development of the Republic into a modern, Western-style state with a republican order and the enactment of a proper constitution, but the writing and enactment of the constitution remains stalled in the midst of political conflict."
  ww1_china.224.a: "Constitution guarantees stability indeed."
+ ww1_china.224.tt: "§YYuan Shikai§! would §Rget upset§! because he loses presidential power with §Bdecentralisation of power§!."
+ ww1_china.225.t: "Tongmenghui Cabinet"
+ ww1_china.225.d: ""
+ ww1_china.225.a: "Worrying already."
+ ww1_china.226.t: "PM Tang Shaoyi Resigns"
+ ww1_china.226.d: "Provisional President Yuan Shikai was unhappy with the implementation of the parliamentary system and confronted the Prime Minister at every turn. He even began to run the government as he pleased without the PM's approval. Premier Tang Shaoyi felt helpless and resigned. Some have expressed concern about whether Yuan Shikai can be trusted."
+ ww1_china.226.a: "The formal government must be formed in the short term."
+ ww1_china.227.t: "Prov. President Yuan Shikai"
+ ww1_china.227.d: "In Peking, Yuan Shikai is inaugurated as the Provisional President of the Republic of China. The President of the Republic of China was supposed to be based in Nanjing, but Yuan Shikai reneged on his promise, claiming that the situation in Peking would deteriorate if he was not there. Revolutionaries are not consent with Yuan Shikai's decision, but for now they celebrate the success of the establishment of the Republic."
+ ww1_china.227.a: "A new era."
 
  ww1_xinjiang.1.t: "Yang Zengxin Assassinated"
  ww1_xinjiang.1.d: "Yang Zengxin is assassinated. Jin Shuren succeeded him as military governor."
