--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -919,6 +919,9 @@
  CHI_continue_qing_new_reforms_desc:0 "With the republicans crushed, we can finish our reforms and legitimize the dynasty."
  CHI_stand_with_tongmenghui:0 "Stand with Tongmenghui"
  CHI_stand_with_tongmenghui_desc:0 "For the revolution!"
+ CHI_establish_provisional_gov:0 "Establish the Prov. Gov."
+ CHI_establish_provisional_gov_desc:0 "The revolution is taking place without a unified leadership in each province. The victory of the revolution requires the establishment and leadership of a single political entity. Mr. Sun Yat-sen, who has been calling for a republican revolution abroad for the past few years, would be an appropriate leader."
+ CHI_establish_provisional_gov_tt:0 "Yuan Shikai would be upset, and we'll need to find another compromise."
  CHI_restore_the_nation:0 "Restore the Nation"
  CHI_restore_the_nation_desc:0 "The Xinhai Revolution has wracked China to its core. All must do their part to mend and repair the nation."
  CHI_constitutional_monarchy:0 "Monarchy Reformation"
