--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -9989,10 +9989,12 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  GULF_army_focus_name: "Emiri Army"
  MSC_army_focus: "Sultanic Army"
  OMA_army_focus: "Imamate Army"
+ ARB_army_focus: "Sheikh's Army"
  GULF_Our_ships: "[Get_GULF_Our_ships_name]"
  GULF_Our_ships_name: "Emir's Ships"
  MSC_Our_ships: "Sultan's Ships"
  OMA_Our_ships: "Imam's Ships"
+ ARB_Our_ships: "Sheikh's Ships"
  GULF_trade_ships: "Expand Merchant Fleet"
  GULF_arms_factory: "Weapones Factory"
  GULF_ottoman_artillery: "Secert Ottoman Deal"
