doing more focuses

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -8041,6 +8041,24 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  JAP_install_water_and_sewage_desc:0 "Did you know that in the western urban centers, they have both clean water supply system and underground passages to stream out the wastewater?\nThat changes the city life much pleasant and easier."
  JAP_tokyo_ondo:0 "Tokyo Ondo"
  JAP_tokyo_ondo_desc:0 ""
+ JAP_indomitable_imperial_army:0 "Indomitable Imperial Armed Forces"
+ JAP_indomitable_imperial_army_desc:0 "We have defeated China, and we have defeated Russia. The Imperial Armed Forces are indomitable, but future war will be more intense, and we must reform to be ready."
+ JAP_legacy_of_akashi_motojiro:0 "Legacy of Akashi Motojiro"
+ JAP_legacy_of_akashi_motojiro_desc:0 "Akashi Maneuver was very effective in the Russo-Japanese War. We will try to follow on his achievements and create a proper intelligence agency."
+ JAP_establish_daihonei:0 "Establish Daihonei"
+ JAP_establish_daihonei_desc:0 ""
+ JAP_battle_of_fengtian_legacy:0 "Legacy of the Battle of Fengtian"
+ JAP_battle_of_fengtian_legacy_desc:0 "The plan to annihilate the Russians at the Battle of Fengtian, forcing them to call up their reinforcements, failed. We need to review what went wrong."
+ JAP_modernise_navy:0 "Modernise Navy"
+ JAP_modernise_navy_desc:0 "Advances in technology have made the Katori class, which predates the Dreadnought, obsolete and a new class of battleship is needed."
+ JAP_type_41_gun:0 "Type 41 Gun"
+ JAP_type_41_gun_desc:0 "Just because the cavalries man horses doesn't mean they don't need bigger firepower, and we should give them that too, by adopting the Type 41 gun, which is an adaptation of the Type 38 from the Osaka Arsenal."
+ JAP_john_browning_in_japan:0 "John Browning In Japan"
+ JAP_john_browning_in_japan_desc:0 "Kijiro Nambu has been called the John Browning of Japan. Although he may not be John Browning, we must make our own weapons with our effort."
+ JAP_tech_transfer:0 "Tech Transfer"
+ JAP_tech_transfer_desc:0 "The leading foreign technology-houses haven't given us their core knowledge, but we have taken some of their technology and we understand it. We need more advanced technologies."
+ JAP_focus_on_domestication:0 "Focus on Domestication"
+ JAP_focus_on_domestication_desc:0 "Locating weapons production is a costly and time-consuming process, but it's worth the pain for the sake of national security."
 
 
  USA_USVI_desc:0 ""
